Générécité faite dans le beat